--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -35,6 +35,7 @@ a {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  padding: 1rem 0;
 }
 
 .section__padding {
