--- a/Frontend/src/Screens/Home/home.css
+++ b/Frontend/src/Screens/Home/home.css
@@ -18,7 +18,7 @@
 
 .text2{
     color: aliceblue !important;
-    padding: 0rem 0.5rem 1rem 0.5rem ;
+    padding: 0rem 0rem 1.5rem 0rem ;
 }
 
 .gpt3__header {
@@ -29,16 +29,17 @@
 .gpt3__header-content {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: flex-start;
     flex-direction: column;
+    margin-top: 10vh;
     margin-right: 5rem;
 }
 
 .gpt3__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
-    font-size: 62px;
+    font-size: 4rem;
     line-height: 75px;
     letter-spacing: -0.04em;
 }
