--- a/Frontend/src/Screens/SpamCheck/spamcheck.css
+++ b/Frontend/src/Screens/SpamCheck/spamcheck.css
@@ -3,14 +3,16 @@
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     width: 100%;
-    height: 50px;
-    /* justify-content: center; */
-    align-items: center;
-    text-align: center;
+    height: 150px;
+    /* justify-content: ; */
+    /* align-items: center; */
+    /* text-align: center; */
+    padding: 0.5rem;
     color: white;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 1rem;
+    /* font-weight: bold; */
     font-family: 'Roboto', sans-serif;
+    margin: 1rem 0;
     /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px   rgba(0, 0, 0, 0.08); */
 }
 .num{
@@ -22,14 +24,14 @@
     min-height: 50px;
     font-family: var(--font-family);
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.2rem;
     line-height: 28px;
     background: var(--color-footer);
     border: 2px solid var(--color-footer);
     padding: 0 1rem;
     outline: none;
     color: #fff;
-    margin-bottom: 1rem;
+    margin: 2rem 0 3rem 0;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
