--- a/Frontend/src/Screens/Home/home.css
+++ b/Frontend/src/Screens/Home/home.css
@@ -126,12 +126,13 @@
     flex: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    margin: 2rem 0;
 }
 
 .gpt3__header-image img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 @media screen and (max-width: 1050px) {
