--- a/Frontend/src/Components/navbar.css
+++ b/Frontend/src/Components/navbar.css
@@ -25,6 +25,7 @@
 .gpt3__navbar-links_container {
     display: flex;
     flex-direction: row;
+    gap: 10px;
 }
 .gpt3__navbar-sign {
     display: flex;
@@ -140,7 +141,7 @@
     color: white;
 }
 .gpt3__navbar-links_container p{
-    color: #11D9C5;
+    color: #11ffe7;
 }
 .gpt3__navbar-menu_container a:hover{
     transform: scale(1.1);
@@ -149,5 +150,8 @@
     transition: transform .2s;
 }
 .hover:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
+    background-color: #11ffe734;
+    border-radius: 15px;
+    transition: 0.2s;
 }
