--- a/Frontend/src/Screens/Home/home.css
+++ b/Frontend/src/Screens/Home/home.css
@@ -84,11 +84,12 @@
     width: 20%;
     min-height: 50px;
     font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 600;
+    text-shadow: 1px 0px 2px black;
+    font-size: 1.25rem;
     line-height: 28px;
     background: linear-gradient(to right,#122C6F, #11D9C5, #122C6F);
-    border: 2px solid #11D9C5;
+    border: 1px solid #11D9C5;
     padding: 0 1rem;
     color: #fff;
     cursor: pointer;
