--- a/Frontend/src/Screens/SpamCheck/spamcheck.css
+++ b/Frontend/src/Screens/SpamCheck/spamcheck.css
@@ -53,3 +53,49 @@
     border-radius: 20px;
     /* border-bottom-right-radius: 5px; */
 }
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem;
+    color: white;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    margin: 1rem 0;
+  }
+  
+  .info table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    background-color: #f2f2f2;
+  }
+  
+  .info table caption {
+    caption-side: top;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+  }
+  
+  .info table th,
+  .info table td {
+    padding: 0.5rem;
+    text-align: left;
+    border: 1px solid #ddd;
+  }
+  
+  .info table th {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .info table tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  
+  .info table tr:hover {
+    background-color: #ddd;
+  }
