--- a/Frontend/src/Screens/Bots/Bots.css
+++ b/Frontend/src/Screens/Bots/Bots.css
@@ -2,32 +2,62 @@
   display: flex;
   justify-content: space-around; /* Adjust as needed */
   width: 80%; /* Adjust as needed */
+  gap: 2rem;
+  height: 60vh;
+  margin-top: 3rem;
 }
 
-.left, .center, .right {
-  flex: 1; /* Each card takes equal space */
+.chi {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: center;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   text-align: center;
+  width: auto;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
-.left img, .center img, .right img {
+.chi img {
   max-width: 100%;
   border-radius: 5px;
+  height: auto;
 }
 
-h1, p {
+.chi h1, p {
   color: white;
 }
 
-h1 {
+.chi h1 {
   margin-top: 10px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
-p {
-  margin-top: 10px;
+.chi p {
+  margin-top: 1rem;
   font-size: 0.9rem;
-  color: #666;
+  color: #ffffff;
+}
+
+
+.glass2{
+  /* flex space around */
+  display: flex;
+  justify-content: space-around;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 30px;
+  margin: 2rem 0rem;
+  width: 90%;
+  height: 100%;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px   rgba(0, 0, 0, 0.08); */
 }
